# src/api/swagger.json
@@ -479,7 +479,7 @@
           
             }
         },
-        "/users/statistic/user-created":{
+        "/admin/statistic/users-created":{
             "get": {
                 "tags": [
                     "Admin"
@@ -537,7 +537,7 @@
           
             }
         },
-        "/admin/user":{
+        "/admin/user/status":{
             "put": {
                 "tags": [
                     "Admin"
